--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+.input-group{
+    width: 80%;
+    margin: auto;
+    margin-top: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.left a:hover{
+    color: #fff !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.left{
+    text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.left a{
+    width: 50%;
+    margin-top: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.left img{
+    border: 1px solid #333;
+    padding: 2px;
+    max-width: 90% !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile{
+    display: flex;
+}
+
+.right{
+    margin: 0 auto;
+}
+
+.right-one{
+    margin: 10px;
+}
+
+.right-two{
+    margin: 10px;
+}
+
+.card{
+    margin-top: 10px;
+}
+
+.container h1{
+    text-align: center;
+}
+
+
+.right-two .list-group-item{
+    min-width: 80% !important;
+}
+
+@media (max-width: 1050px) {
+    .profile{
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 580px) {
+    .list-group-item{
+        width: 100% !important;
+    }
+
+    .right-one .list-group{
+        flex-direction: column;
+    }
 }
